--- a/login.css
+++ b/login.css
@@ -125,7 +125,7 @@ body{
 }
 .or{
    color: #DDDDDD;
-   margin-left: 20px;
+   margin-left: 15px;
 }
 .email-form{
     margin-top: 30px;
@@ -134,4 +134,36 @@ body{
     display: grid;
     margin-bottom: 15px;
 }
-
+.input label{
+    font-family: Nunito Sans;
+    font-size: 12px;
+    color: #828282;
+}
+input{
+    height: 20px;
+    color: #828282;
+    padding: 13px, 10px, 13px, 10px;
+    border-radius: 5px;
+    border: 2px solid #DED2D9;
+}
+.Forgot{
+    margin-top: -18px;
+    display: flex;
+    justify-content: space-between;
+}
+.Forgot p{
+    color: #7F265B;
+    font-weight: bolder;
+    font-family: Nunito Sans;
+}
+.check{
+    display: flex;
+    align-items: center;
+}
+input[type="submit"]{
+    background-color: #73114B;
+    width: 100%;
+    margin-top: 10px;
+    height: 30px;
+    color: white;
+}
