--- a/login.css
+++ b/login.css
@@ -1,22 +1,19 @@
-body{
-    background-color: #FFE6C9;
-}
 .container{
-    background-color: #FFFFFF;
-    width: 70%;
-    height: 35%;
-    margin-left: 15%;
+    background-color:#FFFFFF;
+    width: 100%;
+    height: 100%;
+    margin-left: 0;
     border-radius: 10px;
-    padding: 5px;
-    margin-top: 4%;
-    display: flex;
+    margin-top: 0;
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    border: 1px solid #525252;
+    box-shadow: 2px #525252;
 }
 .container-1{
     background-color: #FFE6C9;
-    width: 60%;
     height: 100%;
     border-radius: 10px;
-    padding-bottom: 20px;
 }
 .img1 img{
     border-top-left-radius: 10px;
@@ -24,23 +21,23 @@ body{
 }
 .circle{
     background-color: #F2DBBF;
-    width: 280px;
-    height: 280px;
+    width: 290px;
+    height: 290px;
     border-radius: 50%;
     margin-left: 26%;
     margin-top: -5%;
-    /* padding: 20%; */
 }
 .circle img{
-    margin-top: 16%;
-    width: 260px;
+    margin-top: 20%;
+    width: 250px;
+    margin-left: 12px;
 }
 .footer{
     text-align: center;
     color: #73114B;
     font-weight: 800;
     font-family: Nunito Sans;
-    margin-top: 13%;
+    margin-top: 10%;
 }
 .footer h5{
     margin-top: -13px;
@@ -63,7 +60,7 @@ body{
     border-radius: 50%;
     position: absolute;
     top: 24%;
-    left: 42%;
+    left: 34%;
 }
 .circle4{
     background-image: linear-gradient(to right,#FFD9A8,#860752);
@@ -71,27 +68,25 @@ body{
     height: 21px;
     border-radius: 50%;
     position: absolute;
-    top: 53%;
-    left: 47.6%;
+    top: 60%;
+    left: 39.4%;
 }
 .img2{
     position: absolute;
-    height: 7%;
-    margin-left: 9.6%;
-    margin-top: 5%;
+    height: 8%;
+    margin-left: 14%;
+    margin-top: 6%;
 }
 .img3{
     position: absolute;
     height: 9%;
-    margin-left: 27%;
-    margin-top: 5%;
+    margin-left: 35%;
+    margin-top: 7%;
 }
 .container2{
-    width: 25%;
-    padding-left: 7%;
-    padding-right: 5%;
-    height: 410px;
-    padding-top: 12%;
+    padding-left: 18%;
+    padding-right: 18%;
+    padding-top: 10%;
 }
 .container2 img{
     height: 35px;
@@ -111,7 +106,7 @@ body{
     border: 2px solid #E8E8E8;
     display: flex;
     align-items: center;
-    padding-left: 40px;
+    padding-left: 55px;
     gap: 5%;
     margin-top: 25px;
     border-radius: 5px;
@@ -127,9 +122,6 @@ body{
    color: #DDDDDD;
    margin-left: 15px;
 }
-.email-form{
-    margin-top: 30px;
-}
 .input{
     display: grid;
     margin-bottom: 15px;
@@ -140,7 +132,7 @@ body{
     color: #828282;
 }
 input{
-    height: 20px;
+    height: 30px;
     color: #828282;
     padding: 13px, 10px, 13px, 10px;
     border-radius: 5px;
@@ -164,6 +156,24 @@ input[type="submit"]{
     background-color: #73114B;
     width: 100%;
     margin-top: 10px;
-    height: 30px;
+    height: 40px;
     color: white;
+}
+
+.account{
+    display: flex;
+    margin-top: 12%;
+    align-items: center;
+    gap: 12px;
+    margin-left: 15%;
+}
+.account p{
+    color:#828282;
+    font-size: 13px;
+}
+.account a{
+    font-size: 13px;
+    text-decoration: none;
+    color: #73114B;
+    font-weight: bold;
 }
